[tool.poetry]
name = "0040-demo-interlinking-tool"
version = "0.1.0"
description = ""
authors = ["Alex Lapchenko <ozeron@me.com>"]
readme = "README.md"
packages = [{include = "0040_demo_interlinking_tool"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.2"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
aiolimiter = "^1.1.0"
backoff = "^2.2.1"
mdpdf = "^0.0.18"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
